--- a/package.json
+++ b/package.json
@@ -12,7 +12,13 @@
     "version": "4.2.0"
   },
   "dependencies": {
-    "hexo": "^4.0.0",
+    "@hapi/boom": "^9.1.0",
+    "@hapi/cryptiles": "^5.0.0",
+    "@hapi/hawk": "^8.0.0",
+    "@hapi/hoek": "^9.0.4",
+    "cryptiles": "^4.1.3",
+    "hawk": "^7.0.10",
+    "hexo": "^4.2.0",
     "hexo-description": "^0.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
@@ -24,6 +30,7 @@
     "hexo-renderer-marked": "^2.0.0",
     "hexo-renderer-stylus": "^1.1.0",
     "hexo-server": "^1.0.0",
-    "hexo-symbols-count-time": "^0.7.1"
+    "hexo-symbols-count-time": "^0.7.1",
+    "request": "^2.88.2"
   }
 }
