--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@ timezone: 'Asia/Shanghai'
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: http://haoyangyuying.github.io/blogs
-root: /blogs/
+url: http://yoursite.com/
+root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
