--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "cryptiles": "^4.1.3",
     "hawk": "^7.0.10",
     "hexo": "^4.2.0",
+    "hexo-addlink": "^1.0.4",
+    "hexo-algolia": "^1.3.1",
+    "hexo-deployer-git": "^2.1.0",
     "hexo-description": "^0.1.0",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-feed": "^2.2.0",
     "hexo-generator-index": "^1.0.0",
     "hexo-generator-searchdb": "^1.3.0",
     "hexo-generator-tag": "^1.0.0",
