--- a/_config.yml
+++ b/_config.yml
@@ -129,3 +129,41 @@ sitemap:
   path: sitemap.xml
 baidusitemap:
   path: baidusitemap.xml
+
+lazyload:
+  enable: true 
+  onlypost: false
+  loadingImg: # eg ./images/loading.gif
+
+pwa:
+  manifest:
+    path: /manifest.json
+    body:
+      name: haoo
+      short_name: haoo
+      icons:
+        - src: /images/android-chrome-192x192.png
+          sizes: 192x192
+          type: image/png
+        - src: /images/android-chrome-512x512.png
+          sizes: 512x512
+          type: image/png
+      theme_color: '#ffffff'
+      background_color: '#ffffff'
+      display: standalone
+  serviceWorker:
+    path: /sw.js
+    preload:
+      urls:
+        - /
+      posts: 5
+    opts:
+      networkTimeoutSeconds: 5
+    routes:
+      - pattern: !!js/regexp /hm.baidu.com/
+        strategy: networkOnly
+      - pattern: !!js/regexp /.*\.(js|css|jpg|jpeg|png|gif)$/
+        strategy: cacheFirst
+      - pattern: !!js/regexp /\//
+        strategy: networkFirst
+  priority: 5
