--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "server": "hexo server"
   },
   "hexo": {
-    "version": "4.2.0"
+    "version": "4.1.1"
   },
   "dependencies": {
     "@hapi/boom": "^9.1.0",
@@ -18,7 +18,7 @@
     "@hapi/hoek": "^9.0.4",
     "cryptiles": "^4.1.3",
     "hawk": "^7.0.10",
-    "hexo": "^4.2.0",
+    "hexo": "^4.1.1",
     "hexo-addlink": "^1.0.4",
     "hexo-algolia": "^1.3.1",
     "hexo-deployer-git": "^2.1.0",
@@ -31,6 +31,8 @@
     "hexo-generator-searchdb": "^1.3.0",
     "hexo-generator-sitemap": "^2.0.0",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-lazyload-image": "^1.0.9",
+    "hexo-pwa": "^0.1.3",
     "hexo-related-popular-posts": "^4.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
